# FunctorClient

./: CMakeLists.txt  CMakeSettings.json  README.md
FunctorAPI/: CMakeLists.txt
FunctorAPI/Source/: API.cpp  API.hpp  Config.hpp  main.cpp
FunctorApp/: CMakeLists.txt  Resource.rc
FunctorApp/Source/: Config.hpp  FunctorApp.cpp  FunctorApp.hpp  main.cpp
FunctorUpdater/: CMakeLists.txt
FunctorUpdater/Source/: main.cpp
